--- a/extras/actionbarcompat/build.gradle
+++ b/extras/actionbarcompat/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'android-library'
 
 dependencies {
-    compile project(':library')
+    compile project(':ActionBar-PullToRefresh:library')
     compile "com.android.support:appcompat-v7:+"
 }
 
